[package]
name = "this_week_in_rust_scrape"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
clap = "2.33.3"
scraper = "0.12.0"
